# yaraku-nlp-assignment

./: .gitignore  .pre-commit-config.yaml  README.md  assignment-directives.md  conftest.py  main.py  pyproject.toml  technical_decisions.md
.github/workflows/: integration.yaml
artifacts/: optimal_hparams.json
src/nlp_engineer_assignment/: __init__.py  api.py  dataset.py  transformer.py  utils.py
tests/: test_api.py  test_dataset.py  test_transformer.py  test_utils.py
