[tool.poetry]
name = "nlp-engineer-assignment"
description = ""
version = "1.0.0"
authors = ["Your Name <name@domain.com>"]

[tool.poetry.dependencies]
fastapi = "~0.104"
numpy = "~1.26"
python = "~3.10"
torch = "~1.12"
uvicorn = "~0.23"

[tool.poetry.group.dev.dependencies]
autopep8 = "~2.0"
flake8 = "~6.1"
pytest = "~7.4"
pre-commit = "~3.5.0"
loguru = "~0.7"

[tool.autopep8]
max_line_length = 120
in-place = true

[tool.typos.files]
extend-exclude = ["data/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
