[tool.poetry]
name = "nlp-engineer-assignment"
description = ""
version = "1.0.0"
authors = ["Your Name <name@domain.com>"]

[tool.poetry.dependencies]
fastapi = "~0.104"
numpy = "~1.26"
python = "~3.10"
torch = "~1.13"
uvicorn = "~0.23"
matplotlib = "~3.8"
loguru = "~0.7"
optuna = "~3.5"
rich = "~13.7"
pydantic-settings = "~2.1"
pydantic = "~2.5"
plotly = "~5.18"

[tool.poetry.group.dev.dependencies]
autopep8 = "~2.0"
flake8 = "~6.1"
pytest = "~7.4"
pre-commit = "~3.5"
isort = "~5.13"
httpx = "~0.25.2"
mypy = "~1.7"


[tool.autopep8]
max_line_length = 120
in-place = true
aggressive = 2

[tool.isort]
line_length = 120
multi_line_output = 3

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_incomplete_defs = true

[tool.typos.files]
extend-exclude = ["data/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
