[project]
name = "nlp-engineer-assignment"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "numpy>=1.26",
    "torch>=2.2",
    "uvicorn>=0.23",
    "matplotlib>=3.8",
    "loguru>=0.7",
    "optuna>=3.5",
    "rich>=13.7",
    "pydantic-settings>=2.1",
    "pydantic>=2.5",
    "plotly>=5.18",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.15.17",
    "prek>=0.4.4",
    "ty>=0.0.49",
    "httpx2>=2.4.0",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { starlette = false }

[tool.typos.files]
extend-exclude = ["data/*"]
